# localshift

./: .clinerules  .coveragerc  .gitignore  .gsd  .pre-commit-config.yaml  15_MINUTE_FORECAST.md  AGENTS.md  DEBUG_ANALYSIS.md  ERROR_SCENARIOS.MD  FORECAST_UNIT_MISMATCH_ANALYSIS.md  FUTURE_FEATURES.md  HOLD_MODE_REMOVAL_REQUIREMENTS.md  HYBRID_TIMESCALE_SLOT_DURATION_ANALYSIS.md  Home Assistant Sensors.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION.md  MODE_SWITCHING_DELAY_ANALYSIS.md  OVERNIGHT_GRID_CHARGING_ANALYSIS.md  PRE_COMMIT_FIX_SUMMARY.md  README.md  REBRAND_IMPLEMENTATION_PLAN.md  REBRAND_PHASE_2_INFRASTRUCTURE.md  REBRAND_PHASE_3_5_CLASSES.md  REBRAND_PHASE_3_ENTITIES.md  REBRAND_PHASE_4_5_CONFIG_CONSTANTS.md  REBRAND_PHASE_4_IMPORTS.md  REBRAND_PHASE_5_UI_TRANSLATIONS.md  REBRAND_PHASE_6_DOCS.md  REBRAND_PHASE_7_DASHBOARD.md  REBRAND_PHASE_8_TESTS.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REGRESSION_ANALYSIS.md  SUMMARY.md  TEST_SCENARIOS.md  TRANSITION_FIXES.md  VISION.md  agent_lib.sh  back  (+10 more)
.agents/rules/: pr-ci-checks.md  tdd-workflow.md  worktrees.md
.githooks/: README.md  post-checkout  pre-commit  pre-push  prepare-commit-msg
.githooks/scripts/: check-tdd.sh  recover-main.sh  verify-safety.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: duplicate-check.yml  lint.yml  test.yml
.opencode/: rules
backlog/: TEMPLATE.md  backlog-crit-001.md  backlog-crit-002.md  backlog-crit-003.md  backlog-high-001.md  backlog-high-002.md  backlog-high-003.md  backlog-high-004.md  backlog-high-005.md  backlog-high-006.md  backlog-high-007.md  backlog-high-008.md  backlog-high-009.md  backlog-high-010.md  backlog-high-011.md  backlog-high-012.md  backlog-high-013.md  backlog-high-014.md  backlog-high-015.md  backlog-high-016.md  backlog-high-017.md  backlog-high-018.md  backlog-high-019.md  backlog-high-020.md  backlog-high-021.md  backlog-high-022.md  backlog-high-023.md  backlog-low-001.md  backlog-low-002.md  backlog-low-003.md  backlog-low-004.md  backlog-low-005.md  backlog-med-001.md  backlog-med-002.md  backlog-med-003.md  backlog-med-004.md  backlog-med-005.md  backlog-med-006.md  backlog-med-007.md  backlog-med-008.md  (+13 more)
custom_components/amber_powerwall/: __init__.py  battery_controller.py  binary_sensor.py  button.py  com  computation_engine  computation_engine.py  config_flow.py  const.py  coordinator.py  coordinator_data.py  cost_tracker.py  manifest.json  notification_service.py  number.py  sensor.py  state_machine.py  state_reader.py  strings.json  switch.py
custom_components/localshift/: AGENTS.md  __init__.py  battery_controller.py  binary_sensor.py  button.py  charging_schedule.py  computation_engine.py  config_flow.py  const.py  coordinator.py  coordinator_data.py  cost_tracker.py  dashboard.yaml  dashboard_v2.yaml  diagnostics.py  entity_validator.py  evaluation_dispatcher.py  forecast_bootstrapper.py  forecast_storage.py  learning_orchestrator.py  manifest.json  notification_service.py  number.py  optimization_engine.py  optimization_model.py  powerwall_service_client.py  select.py  sensor.py  state_machine.py  state_reader.py  strings.json  switch.py  thermal_manager.py  transition_validator.py  weather_correlation.py
dashboards/: amber_powerwall.yaml  amber_powerwall_component.yaml  localshift.yaml
docs/: AGENTS.md  ARCHITECTURE.md  CHANGE_DETECTION.md  CODE_REVIEW_PLAN.md  COVERAGE.md  DEAD_CODE_REPORT.md  DEVELOPER_GUIDE.md  ENTITY_REFERENCE.md  FORECAST_DRIVEN_CONTROL.md  INDEX.md  LEARNING_SYSTEM.md  LOAD_FORECASTING.md  LOAD_SHIFTING_GUIDE.md  NOTIFICATIONS.md  OPTIMIZER_DP_ROLLOUT.md  PLANNING_MODEL.md  TEST_DEPLOYMENT.md  THERMAL_MANAGER_IMPLEMENTATION.md  TROUBLESHOOTING.md
docs/superpowers/: .gitignore
reports/: BASELINE_SUMMARY.md  ISSUE_SUMMARY_COMMENT.md  baseline-metrics.json  coverage-gaps-detailed.json
reports/coverage/: coverage.json
reports/docstring/: interrogate-baseline.json
reports/static-analysis/: bandit-baseline.json  ruff-format-check.txt  safety-baseline.json
reports/type-checking/: mypy-baseline.txt
scripts/: check-pr-ci.sh  coverage_checker.py  dead-code-summary.sh  find_dead_code.py  ha_entity_dump.py  hybrid_dead_code.py  run-test-deploy-daemon.sh  snapshot_charging_plan.py  start-test-deploy.sh  status-test-deploy.sh  stop-test-deploy.sh
simulations/: schema.py
simulations/scenarios/: allow-dw-entry-under-target.json  cloudy-day.json  cross-day-first-dw-only.json  high-solar-negative-fit.json  high-target-soc.json  hot-day-spike.json  manual-override-bypass.json  negative-fit-bounded-predischarge.json  recoverable-negative-fit-preexport.json  recoverable-negative-fit-value-priority.json  sunny-day.json
tests/: AGENTS.md  __init__.py  conftest.py  test_agent_config.py  test_battery_controller.py  test_binary_sensor.py  test_button.py  test_computation_engine.py  test_config_flow.py  test_const.py  test_const_588.py  test_constraints.py  test_coordinator.py  test_cost.py  test_cost_tracker.py  test_counterfactual.py  test_coverage_checker.py  test_decision_lag.py  test_decision_outcome_tracker.py  test_entity_validator.py  test_evaluation_dispatcher.py  test_forecast_accuracy.py  test_forecast_bootstrapper.py  test_forecast_computer.py  test_forecast_history_store.py  test_forecast_pipeline.py  test_futile_cycling_penalty.py  test_history_fetcher_bridging.py  test_history_fetcher_hvac.py  test_hybrid_accuracy.py  test_hybrid_timescale.py  test_init.py  test_integration.py  test_issue_598_efficient_cycling.py  test_learning_integration.py  test_load_forecaster.py  test_lp_optimizer.py  test_machine.py  test_marginal_cycling_penalty.py  test_min_cycle_saving_gate.py  (+40 more)
tests/computation_engine_lib/: test_forecast_history_store.py  (+1 more)
tmp/: .gitignore  large_coupled.tsv
(+276 files in other folders)
