[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localshift"
version = "0.1.0"
description = "LocalShift battery automation for Home Assistant"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "homeassistant",
]

[tool.setuptools.packages.find]
include = ["custom_components.localshift*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["homeassistant"]

[tool.ruff.lint]
select = [
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"custom_components/localshift/*.py" = ["D"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components/localshift"]
exclude = ["tests/"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["custom_components/localshift"]
exclude = [
  "**/__pycache__",
  ".git",
  ".claude",
]
reportMissingImports = false
reportMissingModuleSource = false
reportGeneralTypeIssues = false
reportCallIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "homeassistant>=2024.3.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "vulture>=2.14",
    "ruff>=0.15.2",
]
