[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localshift"
version = "0.1.0"
description = "LocalShift battery automation for Home Assistant"
requires-python = ">=3.13.2"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "homeassistant",
]

[tool.setuptools.packages.find]
include = ["custom_components.localshift*"]

[tool.ruff]
line-length = 88
target-version = "py313"
preview = true

[tool.ruff.lint]
select = [
  "F",
  "I",
  "B",
  "UP",
  "PLR1702",
  "C901",
]

[tool.ruff.lint.per-file-ignores]
"custom_components/localshift/computation_engine_lib/decision_outcome_tracker.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/history_fetcher.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/optimization_controller.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/parameter_optimizer.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/price_calculator.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/slot_builder.py" = ["C901"]
"custom_components/localshift/computation_engine_lib/solar_utils.py" = ["C901"]
"custom_components/localshift/entity_validator.py" = ["C901"]
"custom_components/localshift/notification_service.py" = ["C901"]
"custom_components/localshift/state_machine.py" = ["C901"]
"custom_components/localshift/weather_correlation.py" = ["C901"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components/localshift"]
exclude = ["tests/"]

[tool.deptry]
known_first_party = ["custom_components.localshift"]

[tool.interrogate]
fail-under = 50
exclude = ["tests/"]
ignore-init-module = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["custom_components/localshift"]
exclude = [
  "**/__pycache__",
  ".git",
  ".claude",
]
reportMissingImports = false
reportMissingModuleSource = false
reportGeneralTypeIssues = false
reportCallIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "homeassistant>=2026.2.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "vulture>=2.14",
    "ruff>=0.15.2",
    "deptry>=0.20.0",
    "interrogate>=1.7.0",
]
